# dynamic-tree

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  auto_run.py  config.param  main.cpp  param_parser.h
Example/: covetype_test.arff  parameters.csv
Models/PointSet/: CMakeLists.txt  Point.cpp  Point.h  PointSet.cpp  PointSet.h
Models/Tree/: CMakeLists.txt  Tree.cpp  Tree.h  Vertex.cpp  Vertex.h
